--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,11 @@
 {% extends 'base.html'%}
 
 {% block content %}
-<h1>Acerca de</h1>
+
+    <div class="row">
+        <div class="col-6 mt-5">Quienes Somos</div>
+        <div class="col-6 mt-5">OnlyFlans es una empresa enfocada en el mundo de la pasteleria y los postres, en especial en la venta de flan (de ahi su nombre), nace en el 2021 en santiago de chile como una empresa familiar que pretende entregar productos de calidad a su clientela, estando ubicada en providencia, a pasos del metro parque bustamante.
+        </div>
+    </div>
 
 {% endblock %}
