--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,65 +1,16 @@
 {% extends 'base.html'%}
 
 {% block content %}
-<div class="container">
-    <h1>Contacto</h1>
-    <form method="post">
-        <input type="text" name="nombre" placeholder="Nombre"><br>
-        <input type="email" name="email" placeholder="Correo electrónico"><br>
-        <textarea name="mensaje" placeholder="Mensaje"></textarea><br>
-        <button type="submit">Enviar</button>
-    </form>
-</div>
-
-
-</html>
-
-<style>
-    body {
-        font-family: sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-        color: #333;
-    }
-
-    .container {
-        width: 80%;
-        margin: 20px auto;
-        padding: 20px;
-        background-color: #fff;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    h1 {
-        color: #007bff;
-        /* Azul Django */
-    }
-
-    form {
-        width: 50%;
-        margin: 20px auto;
-    }
-
-    input[type="text"],
-    input[type="email"],
-    textarea {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-    }
-
-    button[type="submit"] {
-        background-color: #007bff;
-        color: white;
-        padding: 12px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-    }
-</style>
+    |<h1>Contacto</h1>
+    <p>Puedes escribirnos en caso que tengas cualquier duda o requerimiento.</p>
+    <div class="row">
+        <div class="col-6">
+            <form action="{% url 'contact' %}" method="post">
+                {% csrf_token %}
+                {{ form }}
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+        </div>
+    </div>
 
 {% endblock %}
